Set `hr` width to auto to avoid horizontal scrolling

--- a/source/stylesheets/components/base.scss
+++ b/source/stylesheets/components/base.scss
@@ -6,7 +6,7 @@ body {
   color: #536171;
 }
 hr {
-  width: 100%;
+  width: auto;
   height: 1px;
   margin: 2rem 0;
   background: black;
